# llm-cookbook

./: .gitignore  Env-Setup.md  README.md  pyproject.toml
content/MCP,Build Rich-Context AI Apps with Anthropic/: 1.简介 Introduction.ipynb  10.创建和部署远程服务器 Creating and Deploying Remote Servers.ipynb  2. 为什么是MCP why MCP.ipynb  3. 聊天机器人示例 Chatbot Example.ipynb  3.MCP架构 MCP Architecture.md  4. 聊天机器人示例 Chatbot Example.ipynb  5.创建MCP服务器 Creating an MCP Server.ipynb  6.创建MCP客户端 Creating an MCP Client.ipynb  7.将MCP聊天机器人连接到参考服务器 Connecting the MCP Chatbot to Reference Servers.ipynb  8.添加提示词和资源功能 Adding Prompt and Resource Features.ipynb  readme.md
content/选修-Finetuning Large Language Models/: 5. 数据处理 Data proparation.ipynb
content/选修-Knowledge Graphs for RAG/: 6. 图谱扩展 KG-expanding.ipynb  7. 图谱对话 KG-chatting.ipynb  8. 总结.md  readme.md
docs/: README.md
docs/C2/: 4. 检查输入-监督 Moderation.md
docs/C3/: 2. 模型、提示和解析器 Models, Prompts and Output Parsers.md
utils/: image2text_chat.py  load_model.py
